# vuz_monitor

./: .env.example  .gitignore  CLAUDE.md  README.md  TODOS.md  config.example.yaml  index.html  mirea-applications.html  mirea-forecast.html  mirea-list.html  mirea-scores.html  mpei.html  pyproject.toml  status.html  table.html
deploy/: com.vuz-monitor.hourly.plist  crontab.example  publish-dashboard.sh  run-and-publish.sh  vuz-monitor.service  vuz-monitor.timer
specs/: 2026-07-15-mirea-neighbors-list-design.md  2026-07-15-mirea-neighbors-list-plan.md  2026-07-15-neighbors-budget-section-design.md  2026-07-15-neighbors-budget-section-plan.md  2026-07-15-neighbors-paid-filter-design.md  2026-07-15-neighbors-paid-filter-plan.md  2026-07-15-network-down-silence-design.md  2026-07-15-network-down-silence-plan.md
tests/: conftest.py  test_config_unique.py  test_connectivity.py  test_dashboard.py  test_deliver_commit.py  test_diff.py  test_gate.py  test_html_table.py  test_mai_html.py  test_mirea_api.py  test_mpei_html.py  test_neighbors.py  test_notified_store.py  test_notify.py  test_notify_neterror.py  test_pipeline.py  test_score_progress.py  test_stankin_html.py  test_store_history.py
tests/fixtures/: html_sample.html  mai_budget.html  mai_cascade_spec.html  mai_paid.html  mirea_sample.json  mpei_budget.html  mpei_bvi_prefix.html  mpei_paid.html  stankin_budget.html  stankin_paid.html
vuz_monitor/: __init__.py  __main__.py  config.py  dashboard.py  diff.py  format.py  models.py  notify.py  pipeline.py  report.py  store.py
vuz_monitor/adapters/: __init__.py  (+6 more)
