[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vuz_monitor"
version = "0.1.0"
description = "Hourly Telegram monitor for Russian university admission ranked lists (конкурсные списки)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
vuz-monitor = "vuz_monitor.__main__:main"

[tool.setuptools.packages.find]
include = ["vuz_monitor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
